# Montague

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  montague.cabal  montague.nix
.github/workflows/: build.yml  ci.yml
examples/: BasicUsage.hs  composition.mont  coordination.mont  en_common_vocabulary.mont  en_grammar_basic.mont  example.mont  extraction.mont  family.mont  pl_common_vocabulary.mont  pl_grammar_basic.mont  qa-syllogism.mont  sem_terms.mont  sorts.mont  syllogism.mont  weather.mont
examples/basic-usage/: Main.hs  montague-usage.cabal
montague/: Cargo.toml
montague-cli/: Cargo.toml
montague-cli/src/: diag.rs  main.rs
montague-cli/tests/: ask_integration.rs
montague-core/: Cargo.toml
montague-core/benches/: chart_vs_dfs.rs
montague-core/src/: autocomplete.rs  beta.rs  chart.rs  display.rs  lib.rs  morph.rs  reduction.rs  reference.rs  registry.rs  sem.rs  semantics.rs  sort.rs  subtyping.rs  types.rs
montague-core/tests/: syllogism.rs
montague-derive/: Cargo.toml
montague-derive/src/: lib.rs
montague-fol/: Cargo.toml
montague-fol/src/: lib.rs
montague-llm/: Cargo.toml
montague-llm/src/: lib.rs
montague-mont/: Cargo.toml
montague-mont/src/: ast.rs  error.rs  lex.rs  lib.rs  parse.rs  parser.rs  resolver.rs  sem_lower.rs  sort.rs  token.rs
montague-pretty/: Cargo.toml
montague-pretty/src/: lib.rs  tree.rs
montague-prolog/: Cargo.toml
montague-prolog/src/: lib.rs
montague-standard/: Cargo.toml
montague-standard/src/: lib.rs
montague/src/: autocomplete.rs  engine.rs  lib.rs  prelude.rs  semantics.rs  types.rs
montague/tests/: syllogism.rs
src/: Montague.hs
src/Montague/: Autocomplete.hs  Display.hs  Lexicon.hs  Semantics.hs  Types.hs
src/Montague/Experimental/: Dialog.hs  Examples.hs  LambekType.hs  PregroupGrammar.hs  ProofRelevant.hs  Prop4.hs  Search.hs  TaglessFinal.hs  Typed.hs  Worlds.hs
