cabal-version:       >= 1.2
name:               montague
build-type:         Simple
version:            0.0.1.0
author:             Nathan Bedell
synopsis:           Non-deterministic parser for natural languages.
maintainer:         nbedell@tulane.edu
extra-source-files:
    CHANGELOG.md
    README.md

library
    default-extensions:
        LambdaCase
      , MultiParamTypeClasses
      , FunctionalDependencies
      , ScopedTypeVariables
      , ExistentialQuantification
      , DataKinds
      , TypeFamilies
      , TypeOperators
      , TypeApplications
      , ScopedTypeVariables
      , FlexibleContexts
      , FlexibleInstances
      , RankNTypes
      , KindSignatures
      , GADTs
    exposed-modules:
        Montague
      , Montague.Semantics
      , Montague.Types
      , Montague.Lexicon
      , Montague.Display
      , Montague.Autocomplete
      , Montague.Experimental.Prop4
      , Montague.Experimental.LambekType
      , Montague.Experimental.Typed
      , Montague.Experimental.TaglessFinal
      , Montague.Experimental.Worlds
      , Montague.Experimental.Search
    build-depends:
        base
      , ghc-prim
      , monad-tree
      , partial-order
      , parsec
      , prettyprinter
      , row-types
      , monad-coroutine
    hs-source-dirs:   src
    default-language: Haskell2010
