[package]
name = "montague-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for Montague — parse, lower, query .mont schemas"

[[bin]]
name = "montague"
path = "src/main.rs"

[dependencies]
montague = { path = "../montague", version = "0.3.0" }
scryer-prolog = { workspace = true }
montague-llm = { path = "../montague-llm", version = "0.3.0", optional = true }
ariadne = "=0.6.0"
strsim = "0.11"

[features]
default = []
llm = ["montague-llm"]
mistralrs = ["llm", "montague-llm/mistralrs"]
