[package]
name = "montague-prolog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SemTerm → Prolog backend for Montague"

[dependencies]
montague-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
scryer-prolog = { workspace = true }
