[package]
name = "montague"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Montague — Lambek-calculus categorial-grammar parser with subtyping (umbrella crate)"
readme = "../README.md"

[dependencies]
montague-core = { workspace = true }
montague-fol = { workspace = true }
montague-mont = { workspace = true }
montague-pretty = { workspace = true }
montague-prolog = { workspace = true }
