cabal-version:      2.4
name:               montague-basic-usage
version:            0.1.0.0
author:             Nathan Bedell
synopsis:           Non-deterministic parser for natural languages.
maintainer:         nbedell@tulane.edu
extra-source-files:
    CHANGELOG.md
    README.md

executable montague-basic-usage
    default-extensions:
        LambdaCase
      , MultiParamTypeClasses
      , FunctionalDependencies
      , ScopedTypeVariables
    build-depends:
        base 
      , montague == 0.1.0.0
      , monad-tree
    main-is: Main.hs
    default-language: Haskell2010
